# LeIsaac-GR00T

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.smolvla  README.md  docker-compose.yaml  docker-compose.yml  lerobot-so101-0-4-4-docker-dockerfile-le-glowing-lampson.md  new-setup.md  pyproject.toml  requirements.txt
datasets/leisaac-so101-pick-orange/: README.md
datasets/leisaac-so101-pick-orange/meta/: episodes.jsonl  episodes_stats.jsonl  info.json  modality.json
docker/: 99-feetech.rules  Dockerfile.leisaac  Dockerfile.lerobot  Dockerfile.smolvla  Dockerfile.teleop  docker-compose.yaml  lerobot-entrypoint.sh  policy-client-shim.py  server-entrypoint.sh  teleop-entrypoint.sh
docker/leisaac-gr00t/: .dockerignore  Dockerfile  build.ps1
docs/: README.md  gr00t-n16-pickorange-pipeline.md  leisaac-gr00t-container.md  simluation_demo.md  smolvla_inference_analysis.md  test-inference-in-simulation.md  vla_zero_shot_survey.md  windows-11-docker-leisaac-gr00t-guide.md  windows-11-docker-leisaac-smolvla-guide.md
notebooks/: training-smolvla.ipynb  training_act.ipynb
scripts/: finetune_gr00t.ps1  inference_follower_bridge.ps1  inference_follower_bridge.py  serve_gr00t.ps1  serve_leisaac.ps1  teleop_leader_bridge.ps1  usbipd.sh
scripts/deployment/: real_robot_gr00t_client.py
scripts/environments/teleoperation/: so101_joint_state_server.py
scripts/examples/: envhub_teleop_example.py
